fix button on small layouts

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -206,10 +206,18 @@ nav {
 }
 
 slogan {
-  .label.radius {
+  .row {
+    @media #{$small-only} {
+      padding-bottom: 20px;
+      padding-left: 60px;
+      padding-right: 60px;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
     background-color: $light-teal;
     border-radius: 5px;
-  }
 
   .slogan {
     text-align: center;
@@ -232,6 +240,11 @@ slogan {
     @media #{$medium-only} {
       margin: 0 60px 30px 60px;
     }
+    @media #{$small-only} {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     padding-top: 20px;
     padding-bottom: 20px;
     color: white;
